# jnp3-project3D

./: .gitignore  CMakeLists.txt  README.md
assets/: model1.mtl  untitled.mtl
project3D/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl  app.cpp  app.h  camera.cpp  camera.h  common.h  main.cpp  object_loader.cpp  object_loader.h  pixel_shader.h  vertex_shader.h
